Fixed menu bar overlapping with vis at top of page

--- a/src/style.css
+++ b/src/style.css
@@ -1,6 +1,5 @@
 /* The sidebar menu, from https://www.w3schools.com/howto/howto_css_fixed_sidebar.asp */
 .sidenav {
-	height: 5%; /* Full-height: remove this if you want "auto" height */
 	width: 100%; /* Set the width of the sidebar */
 	position: fixed; /* Fixed Sidebar (stay in place on scroll) */
 	z-index: 1; /* Stay on top */
